--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@
     position:absolute;
 }
 .overlay{
-	width:100vw;
-	height:100vh;
+	width:100%;
+	height:100%;
 	position:absolute;
     top:0;
     left:0;
